add prelim sections to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,5 +14,8 @@
     <a href="./portfolio.html">Portfolio</a>
   </nav>
   <h1>Portfolio</h1>
+  <section>Project 1</section>
+  <section>Project 2</section>
+  <section>Project 3</section>
 </body>
 </html>
